--- a/node/deploy/wrapper.html
+++ b/node/deploy/wrapper.html
@@ -2,13 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>{{=it.title}}</title>
+<title>{{ =it.title }}</title>
 </head>
 <body>
-<script>if (location.protocol != 'https:')
-{
- location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}</script>
-{{=it.html}}
+<script>
+if (location.protocol != 'https:') {
+  location.href = 'https:' +
+  window.location.href.substring(window.location.protocol.length);
+}
+</script>
+{{ =it.html }}
 </body>
 </html>
