--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -5,8 +5,8 @@
     <meta name="author" content="John Stein">
 <!--     <link rel="icon" href="https://getbootstrap.com/favicon.ico"> -->
     <title>{{=it.title}}</title>
-    <link href="./jscss/bootstrap.min.css" rel="stylesheet">
-    <link href="./jscss/blog.css" rel="stylesheet">
+    <link href="/jscss/bootstrap.min.css" rel="stylesheet">
+    <link href="/jscss/blog.css" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -54,10 +54,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-<!--     <script src="./jscss/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<!--     <script src="/jscss/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
- --><!--     <script src="./jscss/popper.min.js"></script>
+ --><!--     <script src="/jscss/popper.min.js"></script>
  -->
- <!-- <script src="./jscss/bootstrap.min.js"></script>
+ <!-- <script src="/jscss/bootstrap.min.js"></script>
  -->
 </body></html>
