exclude jscss better

--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en"><head>
+<script>
+if (location.protocol != 'https:') {
+  location.href = 'https:' +
+  window.location.href.substring(window.location.protocol.length);
+}
+</script>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Tech Notes">
     <meta name="author" content="John Stein">
@@ -23,8 +30,6 @@
       <div class="row">
         <div class="col-sm-8 blog-main">
           <div class="blog-post">
-            <h2 class="blog-post-title">{{=it.title}}</h2>
-            <p class="blog-post-meta">{{=it.date}}</p>
 {{=it.html}}
           </div><!-- /.blog-post -->
 
