--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -41,8 +41,8 @@ if (location.protocol != 'https:') {
             <h4>Archives</h4>
             <ol class="list-unstyled">
 {{~it.older :value:index}}
-<li><a href="{{=value.link}}">{{=value.title}}</a></li>
-              <hr>
+<li style='padding-bottom: 1em'><a href="{{=value.link}}">{{=value.title}}</a></li>
+              
 {{~}}
             </ol>
           </div>
