--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -21,7 +21,7 @@ if (location.protocol != 'https:') {
         <div class="container">
           <nav class="nav">
             <a class="nav-link active" href="/index.html"
-            >Glo! Tech Notes by John Stein</a>
+            >Glo! &npsp;&npsp;&npsp;Tech Notes by John Stein</a>
           </nav>
         </div>
       </div>
