--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -14,6 +14,7 @@ if (location.protocol != 'https:') {
     <title>{{=it.title}}</title>
     <link href="/jscss/bootstrap.min.css" rel="stylesheet">
     <link href="/jscss/blog.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js">
   </head>
   <body>
     <header>
