--- a/node/deploy/index.html
+++ b/node/deploy/index.html
@@ -14,7 +14,8 @@ if (location.protocol != 'https:') {
     <title>{{=it.title}}</title>
     <link href="/jscss/bootstrap.min.css" rel="stylesheet">
     <link href="/jscss/blog.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js">
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
   </head>
   <body>
     <header>
